# chatgpt-plugin

./: Dockerfile  LICENSE  README.md  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
models/: models.py
server/: main.py
